tests/expectations/compiler/finalize/set_incorrect_num_operands.out
Error [EPAR0370021]: The type of `tokens` has no associated function `set` that takes 3 argument(s).
    --> compiler-test:18:5
     |
  18 |     tokens.set(addr, amount, 1u128);
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370021]: The type of `amounts` has no associated function `set` that takes 1 argument(s).
    --> compiler-test:20:5
     |
  20 |     amounts.set(1u8);
     |     ^^^^^^^^^^^^^^^^
Error [EPAR0370021]: The type of `amounts` has no associated function `set` that takes 0 argument(s).
    --> compiler-test:22:5
     |
  22 |     amounts.set();
     |     ^^^^^^^^^^^^^
